SFD-5602 Increase test coverage